<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FIDEList</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_player">FIDEList</string>
    <string name="title_activity_follow_players">FIDEList</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_card_player">FIDEList</string>
    <string name="title_activity_player">FIDEList</string>
    <string name="title_activity_stadistics">FIDEList</string>
    <string name="title_activity_progress">FIDEList</string>
    <string name="title_activity_games">FIDEList</string>
    <string name="menu_search">Search</string>
    <string name="menu_lista">List</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="info">Info</string>
    <string name="stadistics">Stadistics</string>
    <string name="federation">Fed:</string>
    <string name="title">Title:</string>
    <string name="ranking">Ranking</string>
    <string name="white">White</string>
    <string name="Black">Black</string>
    <string name="all">All</string>
    <string name="win">Win</string>
    <string name="lose">Losed</string>
    <string name="draw">Draw</string>
    <string name="sync">Updating the list of Players</string>
    <string name="ajustes">Settings</string>
    <string name="title_activity_game_list">FIDEList</string>
    <string name="title_activity_elo">Progress Graphics</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_Rtg">Show Rgt.</string>
    <string name="menu_Rpd">Show Rpd.</string>
    <string name="menu_Blz">Show Blz.</string>
    <string name="menu_Historico">Download History</string>
    <string name="title_activity_simple_pie_chart">SimplePieChartActivity</string>

</resources>
